syntax = "proto2";

option java_package = "com.yuqi.schema.raft.generated";
option java_outer_classname = "StorageServerProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message CreateTableRequest {
  required string table_name = 1;
}

message CreateTableResponse {
  required int32 code = 1;
}

service StorageServerService {
  rpc createTable(CreateTableRequest)
      returns(CreateTableResponse);
}